syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "./proto";

package kanban_package;

service KanbanPackage {
  rpc InitializeKanban(CreateKanbanRequest) returns (BoardResponse);
  rpc AddLabel(LabelRequest) returns (Label);
  rpc GetLabels(BoardResponse) returns (GetLabelsResponse);
  rpc GetLabel(GetLabelRequest) returns (Label);
  rpc AddItem(AddItemRequest) returns (Item);
  rpc GetItems(GetItemRequest) returns (GetItemResponse);
  rpc GetItem(DeleteReactionRequest) returns (Item);
  rpc UpdateItem(UpdateItemRequest) returns (Item);
  rpc DeleteItem(DeleteReactionRequest) returns (VoidResp);
  rpc AddComment(CommentRequest) returns (Comment);
  rpc UpdateComment(UpdateCommentRequest) returns (Comment);
  rpc DeleteComment(DeleteCommentRequest) returns (VoidResp);
  rpc AddReaction(AddReactionRequest) returns (VoidResp);
  rpc DeleteReaction(DeleteReactionRequest) returns (VoidResp);
  rpc ExportBoard(BoardResponse) returns (ExportResponse);
}

// =============== Data Models ==============

message UserAccount {
  string id = 1;
  string account_name = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
  string photo_url = 5;
  repeated string users = 6;
  string owner = 7;
  optional string pageId = 8;
  optional string bucketId = 9;
  optional string boardId = 10;
}

message Label {
  string id = 1;
  string name = 2;
  string color = 3;
  string boardId = 4;
}

message Comment {
  string id = 1;
  string userId = 2;
  string message = 3;
  repeated Reaction reactions = 4;
}

message Reaction {
  string id = 1;
  string userId = 3;
  string emoji = 2;
}

enum STATUS {
  TODO = 0;
  PROGRESS = 1;
  COMPLETED = 2;
  CANCELED = 3;
  BACKLOG = 4;
}

message Item {
  string id = 1;
  Label label = 2;
  STATUS status = 3;
  string title = 4;
  string desc = 5;
  string links = 6;
  repeated Comment comments = 7;
  string userId = 8;
}

message Board {
  string id = 1;
  repeated Item items = 2;
  repeated Label labels = 3;
}

// ============ Request Response ============

message CreateKanbanRequest {
  string UserAccountId = 1;
}

message LabelRequest {
  string name = 1;
  string color = 2;
  string boardId = 3;
}

message AddItemRequest {
  string label = 1;
  STATUS status = 2;
  string title = 3;
  string desc = 4;
  string links = 5;
  string boardId = 6;
  string userId = 7;
}

message BoardResponse {
  string id = 1;
}

message GetItemRequest {
  uint32 page = 1;
  uint32 limit = 2;
  string board = 3;
}

message GetItemResponse {
  repeated Item items = 1;
  uint32 page = 2;
}

message ExportResponse {
  string downloadLink = 1;
}

message UpdateItemRequest {
  string id = 1;
  optional string label = 2;
  optional STATUS status = 3;
  optional string title = 4;
  optional string desc = 5;
  string links = 6;
}

message CommentRequest {
  string ItemId = 1;
  string message = 2;
  string userId  = 3;
}

message UpdateCommentRequest {
  string id = 1;
  string message = 2;
}

message DeleteCommentRequest {
  string id = 1;
}

message AddReactionRequest {
  string userId = 1;
  string commentId = 3;
  string emoji = 2;
};

message DeleteReactionRequest {
  string id = 1;
}

message GetLabelsResponse {
  repeated Label labels = 1;
}

message GetLabelRequest {
  string labelId = 1;
}

message VoidResp {}